<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?textAppearanceSubhead1" android:textColor="?colorOnTertiaryContainer" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="200.0dip" android:text="@string/translate_tooltip_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?colorOnTertiaryContainer" android:id="@id/body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="200.0dip" android:text="@string/translate_tooltip_body" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView android:textAppearance="?textAppearanceButton" android:textColor="?colorOnTertiaryContainer" android:id="@id/try_it" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxWidth="200.0dip" android:text="@string/translate_tooltip_try_it" android:textAlignment="viewEnd" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/body" />
</android.support.constraint.ConstraintLayout>