<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip">
        <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?colorOnSurface" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:padding="0.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motion_photos_bottomsheet_text" android:layout_marginHorizontal="25.0dip" />
        <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:id="@id/bottom_sheet_video_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginHorizontal="24.0dip" app:cardCornerRadius="28.0dip" app:cardElevation="0.0dip">
            <com.google.android.apps.camera.ui.eduimageview.EduImageView android:id="@id/bottom_sheet_video" android:layout_width="340.0dip" android:layout_height="270.0dip" />
        </androidx.cardview.widget.CardView>
        <TextView android:textAppearance="?textAppearanceCaption" android:textColor="?colorOnSurfaceVariant" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/bottom_sheet_image_caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/motion_photos_video_caption" android:textAlignment="center" android:layout_marginHorizontal="24.0dip" />
        <TextView android:textAppearance="?textAppearanceCaption" android:textColor="?colorOnSurface" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:padding="0.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/motion_photos_additional_info" android:layout_marginHorizontal="24.0dip" />
        <com.google.android.material.button.MaterialButton android:layout_gravity="center_horizontal" android:id="@id/learn_more_button" android:text="@string/motion_photos_bottomsheet_learn_more" android:layout_marginHorizontal="24.0dip" android:layout_marginVertical="24.0dip" style="@style/MaterialButtonOutlinedStyle.AllRoundedCorner12dp" />
    </LinearLayout>
</merge>