<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/start_placeholder" android:background="@android:color/transparent" android:layout_width="@dimen/bottom_bar_side_content_size" android:layout_height="@dimen/bottom_bar_side_content_size" android:layout_weight="0.0">
        <com.google.android.apps.camera.bottombar.CameraSwitchButton android:layout_gravity="center" android:id="@id/camera_switch_button" android:background="@color/transparent" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/front_back_switch_button_animation" />
        <ViewStub android:layout_gravity="center" android:id="@id/pause_resume_button_view_stub" android:layout="@layout/pause_resume_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" />
        <ViewStub android:layout_gravity="center" android:id="@id/retake_button_view_stub" android:layout="@layout/retake_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/retake_button_description" />
        <ViewStub android:layout_gravity="center" android:id="@id/left_side_cancel_button_view_stub" android:layout="@layout/left_side_cancel_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/cancel_button_description" />
    </FrameLayout>
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <RelativeLayout android:id="@id/zoom_lock_view_parent" android:layout_width="@dimen/zoom_lock_view_width" android:layout_height="@dimen/bottom_bar_content_size">
        <com.google.android.apps.camera.ui.zoomlock.ZoomLockView android:layout_gravity="center" android:id="@id/zoom_lock_view" android:visibility="gone" android:layout_width="@dimen/zoom_lock_view_width" android:layout_height="@dimen/bottom_bar_content_size" android:layout_centerInParent="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:elevation="3.0dip" />
        <FrameLayout android:layout_gravity="center" android:id="@id/center_placeholder" android:background="@android:color/transparent" android:layout_width="@dimen/bottom_bar_content_size" android:layout_height="@dimen/bottom_bar_content_size" android:layout_weight="0.0" android:layout_centerInParent="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:elevation="2.0dip">
            <com.google.android.apps.camera.ui.shutterbutton.ShutterButton android:id="@id/shutter_button" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:soundEffectsEnabled="false" android:accessibilityTraversalBefore="@id/thumbnail_button" />
            <com.google.android.apps.camera.ui.shutterbutton.ShutterButtonProgressOverlay android:id="@id/shutter_progress_overlay" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:soundEffectsEnabled="false" />
        </FrameLayout>
    </RelativeLayout>
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <FrameLayout android:id="@id/end_placeholder" android:background="@android:color/transparent" android:layout_width="@dimen/bottom_bar_side_content_size" android:layout_height="@dimen/bottom_bar_side_content_size" android:layout_weight="0.0" android:alpha="10.0">
        <com.google.android.apps.camera.bottombar.RoundedThumbnailView android:layout_gravity="center" android:id="@id/thumbnail_button" android:background="?android:selectableItemBackgroundBorderless" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/accessibility_filmstrip_toggle" />
        <ViewStub android:id="@id/snapshot_button_stub" android:layout="@layout/snapshot_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/accessibility_shutter_button" />
        <ViewStub android:layout_gravity="center" android:id="@id/cancel_button_stub" android:layout="@layout/cancel_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/cancel_button_description" />
        <ViewStub android:layout_gravity="center" android:id="@id/review_play_button_view_stub" android:background="@drawable/crossfade_button_background" android:visibility="gone" android:layout="@layout/review_play_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/review_button_description" />
    </FrameLayout>
</merge>